<resources>
    <string name="app_name">WITH</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="label">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="str01">WITH</string>
    <string name="str02">You will never walk alone</string>
    <string name="str03">创建账号，表示你同意服务条款和隐私条款</string>
    <string-array name="sports">
        <item>篮球</item>
        <item>足球</item>
        <item>桌球</item>
        <item>乒乓球</item>
        <item>跑步</item>
        <item>游泳</item>
        <item>羽毛球</item>
        <item>网球</item>
        <item>健身</item>
        <item>户外</item>
        <item>溜冰</item>
        <item>其他运动</item>
    </string-array>
    <string-array name="study">
        <item>自习</item>
        <item>晨读</item>
        <item>英语口语</item>
        <item>英语四六级</item>
        <item>BEC</item>
        <item>考研</item>
        <item>看书</item>
        <item>其他学习</item>
    </string-array>
    <string-array name="brpg">
        <item>三国杀</item>
        <item>狼人杀</item>
        <item>UNO</item>
        <item>围棋</item>
        <item>象棋</item>
        <item>五子棋</item>
        <item>德州扑克</item>
        <item>21点</item>
        <item>斗地主</item>
        <item>其他桌游</item>
    </string-array>
    <string-array name="onlineGame">
        <item>英雄联盟</item>
        <item>Dota2</item>
        <item>守望先锋</item>
        <item>CF</item>
        <item>DNF</item>
        <item>王者荣耀</item>
        <item>斗地主</item>
        <item>其他网游</item>
    </string-array>
    <string-array name="date">
        <item>吃饭</item>
        <item>唱K</item>
        <item>电影</item>
        <item>散步</item>
        <item>演唱会</item>
        <item>露营</item>
        <item>其他约会</item>
    </string-array>
    <string-array name="other">
        <item>其他</item>
    </string-array>
    <string name="login_tab">登录</string>
    <string name="register_tab">注册</string>
    <string name="student_number_hint">学号</string>
    <string name="realname_hint">姓名</string>
    <string name="sex_label">性别</string>
    <string name="man_label">男</string>
    <string name="woman_label">女</string>
    <string name="verification_btn">验证</string>
    <string name="warning_report1_dialog">此学号已绑定于手机：</string>
    <string name="warning_report2_dialog">请用该号码登录</string>
    <string name="warning_forget_password_btn_dialog">找回密码</string>
    <string name="warning_appeal_btn_dialog">申诉</string>
    <string name="warning_gotologin_btn_dialog">去登录</string>
    <string name="phone_number_hint">手机号码</string>
    <string name="get_verification_code_btn">验证码</string>
    <string name="input_verification_code_hint">输入验证码</string>
    <string name="password_hint">密码</string>
    <string name="confirm_password_hint1">确认密码</string>
    <string name="creat_txt_label">创建账号，表示你同意服务条款和隐私条款</string>
    <string name="forget_password_label">忘记密码</string>
    <string name="app_name_label">WITH</string>
    <string name="app_tagline_label">You Will Never Walk Alone</string>
    <string name="home_title">首页</string>
    <string name="sport_label">运动</string>
    <string name="study_label">学习</string>
    <string name="brpg_label">桌游</string>
    <string name="onlinegame_label">网游</string>
    <string name="party_label">聚会</string>
    <string name="other_label">其他</string>
    <string name="my_invitation_label">我发起的活动</string>
    <string name="my_participation_label">我参与的活动</string>
    <string name="my_insist_label">我的坚持</string>
    <string name="my_news_label">我的信息</string>
    <string name="my_concern_label">我的关注</string>
    <string name="setting_label">设置</string>
    <string name="about_us">关于我们</string>
    <string name="quit_label">退出登录</string>
    <string name="check_update_label">检查更新</string>
    <string name="old_password_hint">请输入原密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="confirm_password_hint">请确认新密码</string>
    <string name="modify_password_hint">修改密码</string>
    <string name="my_concern_title">我的关注</string>
    <string name="activity_tab">活动</string>
    <string name="user_tab">用户</string>
    <string name="cancel_concern_btn">取关</string>
    <string name="concern_btn">关注</string>
    <string name="my_news_title">我的信息</string>
    <string name="activity_news_label">活动消息</string>
    <string name="special_application_label">特批消息</string>
    <string name="comefrom_label">来自：</string>
    <string name="applicant_label">申请人</string>
    <string name="cancel_event_label">【取消了活动】</string>
    <string name="exit_event_label">【退出了活动】</string>
    <string name="activity_title_label_dialog">活动标题：</string>
    <string name="activity_time_label_dialog">活动时间：</string>
    <string name="active_site_label_dialog"> 活动地点：</string>
    <string name="applicant_number_label">已报名人数：</string>
    <string name="delete_news_btn_dialog">删除消息</string>
    <string name="approval_btn_dialog">批准</string>
    <string name="insist_title">坚持</string>
    <string name="daily_noteslabel">每日备注</string>
    <string name="edit_btn">编辑</string>
    <string name="new_task_dialog">新建任务</string>
    <string name="task_title_dialog">任务标题：</string>
    <string name="task_details_dialog">任务详情：</string>
    <string name="cancel_btn_dialog">取消</string>
    <string name="ensure_btn_dialog">确定</string>
    <string name="personal_data_title">个人资料</string>
    <string name="name_label">姓名</string>
    <string name="student_number_label">学号</string>
    <string name="QQ_label">QQ</string>
    <string name="phone_number_label">手机号码</string>
    <string name="activity_data_title">活动详情</string>
    <string name="time_label">时间</string>
    <string name="site_label">地点</string>
    <string name="sex_requirements_label">性别要求：</string>
    <string name="applicanted_label">已报名：</string>
    <string name="originator_information_label">发起人信息：</string>
    <string name="participant_information_label">参与人信息：</string>
    <string name="my_sponsor_title">我的活动</string>
    <string name="edit_btn_dialog">我的发起</string>
    <string name="remove_btn_dialog">删除</string>
    <string name="basketball_label_dialog">篮球</string>
    <string name="football_label_dialog">足球</string>
    <string name="pingpongball_label_dialog">乒乓球</string>
    <string name="badminton_label_dialog">羽毛球</string>
    <string name="volleyball_label_dialog">排球</string>
    <string name="tennis_label_dialog">网球</string>
    <string name="billiards_label_dialog">桌球</string>
    <string name="run_label_dialog">跑步</string>
    <string name="bodybuilding_label_dialog">健身</string>
    <string name="swimming_label_dialog">游泳</string>
    <string name="outdoors_label_dialog">户外</string>
    <string name="skating_label_dialog">溜冰</string>
    <string name="lol_label_dialog">英雄联盟</string>
    <string name="overwatch_label_dialog">守望先锋</string>
    <string name="wwtk_label_dialog">三国杀</string>
    <string name="dota2_label_dialog">DOTA2</string>
    <string name="kingglory_label_dialog">王者荣耀</string>
    <string name="cf_label_dialog">CF</string>
    <string name="fal_label_dialog">斗地主</string>
    <string name="dnf_label_dialog">地下城与勇士</string>
    <string name="chinesechess_label_dialog">象棋</string>
    <string name="go_label_dialog">围棋</string>
    <string name="gobang_label_dialog">五子棋</string>
    <string name="texasholdem_label_dialog">德州扑克</string>
    <string name="point21_label_dialog">21点</string>
    <string name="werewolfKill_label_dialog">狼人杀</string>
    <string name="uno_label_dialog">UNO</string>
    <string name="selfstudy_label_dialog">自习</string>
    <string name="spokenenglish_label_dialog">英语口语</string>
    <string name="cet_label_dialog">英语四六级</string>
    <string name="morningreading_label_dialog">晨读</string>
    <string name="read_label_dialog">看书</string>
    <string name="pubmed_label_dialog">考研</string>
    <string name="bec_label_dialog">BEC</string>
    <string name="film_label_dialog">电影</string>
    <string name="dinner_label_dialog">吃饭</string>
    <string name="karaoke_label_dialog">唱K</string>
    <string name="camping_label_dialog">露营</string>
    <string name="walk_label_dialog">散步</string>
    <string name="concert_label_dialog">演唱会</string>
    <string name="my_activity_title">发起活动</string>
    <string name="my_sponser_title">我的活动</string>
    <string name="activity_type_label">活动类型：</string>
    <string name="activity_title_label">活动标题：</string>
    <string name="description_label">内容描述：</string>
    <string name="description_hint">请描述活动具体内容</string>
    <string name="unlimited_label">不限</string>
    <string name="activity_time_label">活动时间：</string>
    <string name="active_site_label">活动地点：</string>
    <string name="upper_limit_label">人数上限：</string>
    <string name="hide_Information_label">隐藏参与人信息：</string>
    <string name="launch_activities_btn">发起活动</string>
    <string name="cancel_return_btn">取消返回</string>
    <string name="ensure_edit_btn">确认编辑</string>
    <string name="cancel_activity_btn">取消活动</string>
    <string name="basketball_title1_label">无兄弟，不篮球！</string>
    <string name="basketball_title2_label">发起了打篮球活动</string>
    <string name="basketball_title3_label">打篮球，求with！</string>
    <string-array name="title_basketball">
        <item>无兄弟，不篮球</item>
        <item>发起了打篮球活动</item>
        <item>打篮球，求with</item>
    </string-array>
    <string name="football_title1_label">足球，速度与激情</string>
    <string name="football_title2_label">发起了踢足球活动</string>
    <string name="football_title3_label">踢足球，求with！</string>
    <string-array name="title_football">
        <item>足球，速度与激情</item>
        <item>发起了踢足球活动</item>
        <item>踢足球，求with</item>
    </string-array>
    <string name="pingpongball_title1_label">乒出快乐，乒出精彩！</string>
    <string name="pingpongball_title2_label">发起了打乒乓球活动</string>
    <string name="pingpongball_title3_label">组队打乒乓球，求with！</string>
    <string-array name="title_pingpongball">
        <item>乒出快乐乒出精彩</item>
        <item>发起了乒乓球活动</item>
        <item>打乒乓球，求with</item>
    </string-array>
    <string name="badminton_title1_label">“羽”你相遇，好幸运~</string>
    <string name="badminton_title2_label">发起了打羽毛球活动</string>
    <string name="badminton_title3_label">组队打羽毛球，求with！</string>
    <string-array name="title_badminton">
        <item>羽你相遇，好幸运</item>
        <item>发起了打羽毛球活动</item>
        <item>打羽毛球，求with</item>
    </string-array>
    <string name="volleyball_title1_label">排排更健康！</string>
    <string name="volleyball_title2_label">发起了打排球活动</string>
    <string name="volleyball_title3_label">组队打排球，求with！</string>
    <string-array name="title_volleyball">
        <item>排排更健康</item>
        <item>发起了打排球活动</item>
        <item>打排球，求with</item>
    </string-array>
    <string name="tennis_title1_label">网球场上挥拍间超越平凡！</string>
    <string name="tennis_title2_label">发起了打网球活动</string>
    <string name="tennis_title3_label">组队打网球，求with！</string>
    <string-array name="title_tennis">
        <item>来网球场挥洒汗水</item>
        <item>发起了打网球活动</item>
        <item>打网球，求with</item>
    </string-array>
    <string name="billiards_title1_label">一杆在手，广交朋友！</string>
    <string name="billiards_title2_label">发起了打桌球活动</string>
    <string name="billiards_title3_label">组队打桌球，求with！</string>
    <string-array name="title_billiards">
        <item>一杆在手广交朋友</item>
        <item>发起了打桌球活动</item>
        <item>打桌球，求with</item>
    </string-array>
    <string name="run_title1_label">随风奔跑自由是方向！</string>
    <string name="run_title2_label">发起了跑步活动</string>
    <string name="run_title3_label">组队跑步，求with！</string>
    <string-array name="title_run">
        <item>追你才想跑步</item>
        <item>发起了跑步活动</item>
        <item>跑步，求with</item>
    </string-array>
    <string name="bodybuilding_title1_label">生命不止，健身不息！</string>
    <string name="bodybuilding_title2_label">发起了健身活动</string>
    <string name="bodybuilding_title3_label">组队健身，求with！</string>
</resources>