<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f2"
    android:orientation="vertical"
    android:layout_gravity="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#52cf69"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/head"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:text="谢霆锋"
            android:textColor="#fff"
            android:textSize="22sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="35dp"
        android:gravity="center_vertical"
        android:drawablePadding="27dp"
        android:drawableLeft="@drawable/myinvitation"
        android:text="@string/my_participation_label"
        android:textColor="#a2000000"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:drawablePadding="27dp"
        android:drawableLeft="@drawable/myattendance"
        android:text="@string/my_participation_label"
        android:textColor="#a2000000"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:drawablePadding="27dp"
        android:drawableLeft="@drawable/mypersistence"
        android:text="@string/my_insist_label"
        android:textColor="#a2000000"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/item_myattention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:drawablePadding="27dp"
        android:drawableLeft="@drawable/myattention"
        android:text="@string/my_news_label"
        android:textColor="#a2000000"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:drawablePadding="27dp"
        android:drawableLeft="@drawable/mymessage"
        android:text="@string/my_concern_label"
        android:textColor="#a2000000"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:drawablePadding="27dp"
        android:drawableLeft="@drawable/setting"
        android:text="@string/setting_label"
        android:textColor="#a2000000"
        android:textSize="15sp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        android:drawablePadding="27dp"
        android:drawableLeft="@drawable/update"
        android:text="@string/check_update_label"
        android:textColor="#a2000000"
        android:textSize="15sp"/>
</LinearLayout>