<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/verify_lLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/usernum_edtTxt"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/num_ic"
            android:hint="学号"
            android:inputType="number"
            android:layout_marginBottom="2dp"
            android:singleLine="true"
            android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >
        <android.support.design.widget.TextInputLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username_edtTxt"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/name_ic"
            android:hint="姓名"
            android:layout_marginBottom="2dp"
            android:singleLine="true"
            android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sex_ic"/>

        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/label"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/sex_rdoGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male_rdoBtn"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/male"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/female_rdoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/female"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_ripple"
        android:text="验证"
        android:textColor="#ffffff"
        android:textSize="20sp" />
</LinearLayout>
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/reg_fragment"
        android:visibility="gone"
        />
</RelativeLayout>
